fix list item wrapping

--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -50,8 +50,6 @@
 }
 
 .li {
-  display: flex;
-  gap: 1em;
   text-align: start;
 }
 
